--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <h4><a class="menu-item" href="./members/" style="color: #2c3e50"><strong>Members</strong></a></h4>
 
-  <h4><a class="menu-item" href="https://github.com/astro-gzhu/publication_data" style="color: #2c3e50"><strong>Publication & Data</strong></a></h4>
+  <h4><a class="menu-item" href="./papers/" style="color: #2c3e50"><strong>Publication & Data</strong></a></h4>
 </section>
 <!-- 主菜单 -->
 
