--- a/papers/index.html
+++ b/papers/index.html
@@ -86,7 +86,7 @@
 <!--</section>-->
 <!-- 活动列表 -->
 
-<a href="(23_jet_set)Fan_2023_ApJS_268_23.pdf" download>Fan 2023</a>
+<a href="(23_jet_set)Fan_2023_ApJS_268_23.pdf">Fan 2023</a>
 
 <!-- 脚注 -->
 <footer class="text-center footer">
