--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <meta name="description" content="Simple minimalist theme">
 <meta name="keywords" content="minimalist,blog,goa,hugo,developer">
 
@@ -41,7 +40,7 @@
 
 <!-- 主菜单 -->
 <header class="text-left content-header">
-  <h1 class="author"><a href="../">Home</a></h1>
+  <h1 class="author"><a href="./">Home</a></h1>
 </header>
 <!-- 主菜单 -->
 
@@ -56,17 +55,19 @@
   <p>Sorry, that page does not exist! It may have been removed or moved to a new section on the site. Click <a href="./">here</a> go back to the home page.</p>
 </section>
 
+
+
+
+<!-- 脚注 -->
 <footer class="text-center footer">
   <hr />
-  
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:fjh@gzhu.edu.cn">fjh@gzhu.edu.cn</a></h6>
-  <h6 class="text-center copyright">© 2024- Guangzhou Galactic Nuclei Voyagers</h6>
-  
+  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:yucong@mail.sysu.edu.cn">yucong@mail.sysu.edu.cn</a></h6>
+  <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
 </footer>
-
+<!-- 脚注 -->
 </div>
 
-
+<!-- 末脚本 -->
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
@@ -85,5 +86,6 @@ if (!doNotTrack) {
   <script src="https://unpkg.com/prismjs@1.20.0/plugins/autoloader/prism-autoloader.min.js"
     data-autoloader-path="https://unpkg.com/prismjs@1.20.0/components/"></script>
 </body>
+<!-- 末脚本 -->
 </html>
 
