--- a/index.html
+++ b/index.html
@@ -37,20 +37,64 @@
 <span class="title1">Exoplanets &amp; Planet </span>
 <span  class="title2">Formation Workshop</span> <span class="year">2025</span>
 </div>
+<br>
 <!-- 主标题 -->
 
 <!-- 主菜单 -->
+<!--
 <header class="text-left content-header">
   <h1 class="author"><a href="./">Home</a></h1>
 </header>
+-->
+<tbody>
+<tr>
+<td class="navigation"> <a class="current" title="Conference Home Page"
+
+href=".">Home</a> </td>
+<td class="navigation"> <a title="Register for the Conference" href="registration">Registration</a>
+</td>
+<td class="navigation"> <a title="Conference Program" href="program">Program</a>
+</td>
+<td class="navigation"> <a title="Logistics of the Conference" href="logistics">Logistics</a>
+</td>
+<td class="navigation"> <a title="Conference Participant List" href="participant_list">Participant
+List</a> </td>
+</tr>
+</tbody>
+</table>
 <!-- 主菜单 -->
+
+<!-- 主内容 -->
+<h2>Scientific Rationale</h2>
+<p>Exoplanets and planet formation are among the most rapidly developing
+field in astrophysics. This is largely driven by the advent of major
+observational facilities such as ALMA and JWST, together with advancement
+in theoretical models and computational efforts. Following the success of
+Protostars &amp; Planets VII earlier this year, this workshop will bring
+researchers primarily around the East Asian area, for more in-depth
+communications and discussions on the frontiers of this field, and aims to
+foster regional interactions and collaborations in the post-covid era. It
+also serves as a continuation of the "Exoplanet and Planet Formation"
+international conference in 2017 held in Shanghai, and the "Planet
+Formation (regional) Workshop 2019" held at NAOJ.</p>
+<p>Topics include:</p>
+<ul class="list">
+  <li class="list">Formation, structure, dynamics, chemistry and evolution of protoplanetary disks</li>
+  <li class="list">Formation of planets and planetary systems and its synergy with protoplanetary disks</li>
+  <li class="list">Detection, characterization, atmosphere and dynamics of exoplanets</li>
+</ul>
+<p>
+  For general questions or inquiries about the EPF2023 conference, 
+  please contact us at <a href="mailto:epf2023@163.com">epf2023@163.com</a>.
+</p>
+<!-- 主内容 -->
 
 
 <!-- 脚注 -->
 <div class="container">
 <footer class="text-center footer">
   <hr />
-  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:yucong@mail.sysu.edu.cn">yucong@mail.sysu.edu.cn</a></h6>
+  <h6 class="text-center extra-footer">Reach us at <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a></h6>
   <h6 class="text-center copyright">© 2025 - School of Physics and Astronomy, Sun Yat-sen University</h6> 
 </footer>
 </div>
