--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <h1 class="author"><a href="./">Home</a></h1>
 </header>
 -->
+<table class="navigation">
 <tbody>
 <tr>
 <td class="navigation"> <a class="current" title="Conference Home Page"
