--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 
 <body lang="en-us">
 
-
-
-
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
@@ -39,6 +36,8 @@
 </div>
 <br>
 <!-- 主标题 -->
+
+
 
 <!-- 主菜单 -->
 <!--
@@ -49,21 +48,23 @@
 <table class="navigation">
 <tbody>
 <tr>
-<td class="navigation"> <a class="current" title="Conference Home Page"
 
-href=".">Home</a> </td>
-<td class="navigation"> <a title="Register for the Conference" href="registration">Registration</a>
-</td>
-<td class="navigation"> <a title="Conference Program" href="program">Program</a>
-</td>
-<td class="navigation"> <a title="Logistics of the Conference" href="logistics">Logistics</a>
-</td>
-<td class="navigation"> <a title="Conference Participant List" href="participant_list">Participant
-List</a> </td>
+<td class="navigation"> <a class="current" title="Conference Home Page"href=".">Home</a> </td>
+
+<td class="navigation"> <a title="Register for the Conference" href="registration">Registration</a></td>
+
+<td class="navigation"> <a title="Conference Program" href="program">Program</a></td>
+
+<td class="navigation"> <a title="Logistics of the Conference" href="logistics">Logistics</a></td>
+
+<td class="navigation"> <a title="Report & Poster" href="report_poster">Report &amp; Poster</a> </td>
+
 </tr>
 </tbody>
 </table>
 <!-- 主菜单 -->
+
+
 
 <!-- 主内容 -->
 <h2>Scientific Rationale</h2>
