--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,300&family=Merriweather:wght@100;200;300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="https://adrian.pw/css/custom.css">
 <link rel="icon" type="image/png" href="./img/favicon.ico" />
 <link rel="manifest" href="./manifest.json">
@@ -64,9 +64,9 @@
 </table>
 <!-- 主菜单 -->
 
-<!--
+
 <!-- 提交报告/海报 -->
-<form action="https://formspree.io/f/your-form-id" method="POST">
+<form action="https://formspree.io/f/movjlzor" method="POST">
 <h2>提交报告摘要</h2>
 <label for="name">姓名：</label>
 <input type="text" id="name" name="name" required>
@@ -83,7 +83,7 @@
 
 </form>
 <!-- 提交报告/海报 -->
--->
+
 
 
 <!-- 脚注 -->
