--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -49,7 +49,7 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href=".">Home</a> </td>
+<td class="navigation"> <a class="current" title="Conference Home Page"href="..">Home</a> </td>
 
 <td class="navigation"> <a title="Register for the Conference" href="registration">Registration</a></td>
 
