--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 <link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="https://adrian.pw/css/custom.css">
-<link rel="icon" type="image/png" href="./img/favicon.ico" />
+<link rel="icon" type="image/png" href="../img/favicon.ico" />
 <link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#ffffff">
 </head>
@@ -67,14 +67,14 @@
 
 <!-- 提交报告/海报 -->
 <form action="https://formspree.io/f/movjlzor" method="POST">
-<h2>提交报告摘要</h2>
-<label for="name">姓名：</label>
+<h2>Submission of a brief abstract of the report</h2>
+<label for="name">Name: </label>
 <input type="text" id="name" name="name" required>
-<label for="email">邮箱：</label>
+<label for="email">Mail: </label>
 <input type="email" id="email" name="email" required>
-<label for="report">报告摘要：</label>
+<label for="report">Abstract: </label>
 <textarea id="report" name="report" rows="5" required></textarea>
-<button type="submit">提交</button>
+<button type="submit">Submit: </button>
 
 <!-- 可选：文件上传
   <label for="attachment">附件：</label>
