--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -57,7 +57,7 @@
 
 <td class="navigation"> <a title="Logistics of the Conference" href="logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Report & Poster" href=".">Report \& Poster</a> </td>
+<td class="navigation"> <a title="Report & Poster" href=".">Report &amp; Poster</a> </td>
 
 </tr>
 </tbody>
@@ -67,7 +67,7 @@
 
 <!-- 提交报告/海报 -->
 <form action="https://formspree.io/f/movjlzor" method="POST">
-<h2>Submission of a brief abstract of the report</h2>
+<h3>Submit your abstract of report: </h3>
 <label for="name">Name: </label>
 <input type="text" id="name" name="name" required>
 <label for="email">Mail: </label>
