--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -68,12 +68,17 @@
 <!-- 提交报告/海报 -->
 <form action="https://formspree.io/f/movjlzor" method="POST">
 <h3>Submit your abstract of report: </h3>
+
 <label for="name">Name: </label>
 <input type="text" id="name" name="name" required>
-<label for="email">Mail: </label>
+
+<label for="email">E-mail: </label>
 <input type="email" id="email" name="email" required>
+<br>
+
 <label for="report">Abstract: </label>
 <textarea id="report" name="report" rows="5" required></textarea>
+
 <button type="submit">Submit: </button>
 
 <!-- 可选：文件上传
