--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -78,8 +78,11 @@
 
 <label for="report">Abstract: </label>
 <textarea id="report" name="report" rows="5" required></textarea>
+<br>
 
-<button type="submit">Submit: </button>
+<button type="submit">
+<h4>Submit</h4>
+</button>
 
 <!-- 可选：文件上传
   <label for="attachment">附件：</label>
