--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -76,7 +76,7 @@
 <input type="email" id="email" name="email" required>
 <br>
 
-<label for="report">Abstract: </label>
+<label for="report">Abstract: </label><br>
 <textarea id="report" name="report" rows="10" cols="50" required></textarea>
 <br>
 
