--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -73,7 +73,7 @@
 <input type="text" id="name" name="name" required>
 
 <label for="email">E-mail: </label>
-<input type="email" id="email" name="email" required>
+<input type="email" id="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 <br>
 
 <label for="report">Abstract: </label><br>
