--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -70,14 +70,14 @@
 <h3>Submit your abstract of report: </h3>
 
 <label for="name">Name: </label>
-<input type="text" id="name" name="name" required>
+<input type="text" id="name" name="name" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 
 <label for="email">E-mail: </label>
 <input type="email" id="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 <br>
 
 <label for="report">Abstract: </label><br>
-<textarea id="report" name="report" rows="10" cols="100" required></textarea>
+<textarea id="report" name="report" rows="10" cols="100" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></textarea>
 <br>
 
 <button type="submit">
