--- a/registration/index.html
+++ b/registration/index.html
@@ -49,15 +49,15 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href="..">Home</a> </td>
+<td class="navigation"> <a class="current" title="Conference Home Page"href="../">Home</a> </td>
 
-<td class="navigation"> <a title="Register for the Conference" href="registration">Registration</a></td>
+<td class="navigation"> <a title="Register for the Conference" href="./">Registration</a></td>
 
-<td class="navigation"> <a title="Conference Program" href="program">Program</a></td>
+<td class="navigation"> <a title="Conference Program" href="../program">Program</a></td>
 
-<td class="navigation"> <a title="Logistics of the Conference" href="logistics">Logistics</a></td>
+<td class="navigation"> <a title="Logistics of the Conference" href="../logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Report & Poster" href=".">Report &amp; Poster</a> </td>
+<td class="navigation"> <a title="Report & Poster" href="../report_poster">Report &amp; Poster</a> </td>
 
 </tr>
 </tbody>
