--- a/registration/index.html
+++ b/registration/index.html
@@ -65,32 +65,9 @@
 <!-- 主菜单 -->
 
 
-<!-- 提交报告/海报 -->
-<form action="https://formspree.io/f/movjlzor" method="POST">
-<h3>Submit your abstract of report: </h3>
-
-<label for="name">Name: </label>
-<input type="text" id="name" name="name" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
-
-<label for="email">E-mail: </label>
-<input type="email" id="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
-<br>
-
-<label for="report">Abstract: </label><br>
-<textarea id="report" name="report" rows="10" cols="100" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></textarea>
-<br>
-
-<button type="submit">
-<h4>Submit</h4>
-</button>
-
-<!-- 可选：文件上传
-  <label for="attachment">附件：</label>
-  <input type="file" id="attachment" name="attachment"> 
--->
-
-</form>
-<!-- 提交报告/海报 -->
+<!-- 主内容 -->
+<h2>Here will show the process of registration.</h2>
+<!-- 主内容 -->
 
 
 
