--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -80,8 +80,8 @@
 <textarea id="report" name="report" rows="10" cols="100" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required></textarea>
 <br>
 
-<button type="submit">
-<h4>Submit</h4>
+<button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 16px;">
+    Submit
 </button>
 
 <!-- 可选：文件上传
