--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -82,7 +82,7 @@
 <br>
 
 <button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
-    Submit
+Click here to submit
 </button>
 
 <!-- 可选：文件上传
