--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 <br>
 <!-- 主标题 -->
 
-
+<!-- 时间/地点 -->
+<div class="bottom-right">&nbsp; September 1-4, 2025<br>
+LiJiang, Yunnan</div>
+<!-- 时间/地点 -->
 
 <!-- 主菜单 -->
 <!--
