--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <body lang="en-us">
 
+
+<div>
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
@@ -66,7 +68,7 @@ LiJiang, Yunnan</div>
 </tbody>
 </table>
 <!-- 主菜单 -->
-
+</div>
 
 
 <!-- 主内容 -->
