--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body lang="en-us">
 
 
-<div>
+<div class="banner">
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
@@ -44,6 +44,8 @@
 LiJiang, Yunnan</div>
 <!-- 时间/地点 -->
 </div>
+
+
 <!-- 主菜单 -->
 <!--
 <header class="text-left content-header">
