--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="banner">
 <!-- 主标题 -->
-<div class="top-left"> 
+<div class="bottom-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
 <span  class="title2">Formation Workshop</span> <span class="year">2025</span>
 </div>
@@ -40,7 +40,7 @@
 <!-- 主标题 -->
 
 <!-- 时间/地点 -->
-<div class="bottom-right">&nbsp; September 1-4, 2025<br>
+<div class="top-right">&nbsp; September 1-4, 2025<br>
 LiJiang, Yunnan</div>
 <!-- 时间/地点 -->
 </div>
