--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ LiJiang, Yunnan</div>
   <h1 class="author"><a href="./">Home</a></h1>
 </header>
 -->
+<div>
 <table class="navigation">
 <tbody>
 <tr>
@@ -71,6 +72,7 @@ LiJiang, Yunnan</div>
 </tbody>
 </table>
 <!-- 主菜单 -->
+</div>
 
 
 <!-- 主内容 -->
