--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
 <body lang="en-us">
 
-
+<!--
 <div class="banner">
+-->
+<div>
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
