--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--
 <div class="banner">
 -->
-<div>
+<div class="header-container">
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
