--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body lang="en-us">
 
-<div class="banner"> <img src="img/IMG_3969.jpg" alt="EPF2023 Banner">
+<div class="banner"> <img src="./img/IMG_3969.jpg" alt="EPF2023 Banner">
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
