--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en-us">
 
+
 <!-- 网页风格 -->
+<!--
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -25,7 +27,21 @@
 <link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#ffffff">
 </head>
+-->
 <!-- 网页风格 -->
+
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<base href=".">
+<link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+<link rel="stylesheet" type="text/css" media="all" href="./css/main.css">
+<meta name="description" content="EPF2023">
+<meta name="resource-type" content="document">
+<meta name="distribution" content="global">
+<meta name="KeyWords" content="Conference">
+<title>EPF2025</title>
+</head>
+
 
 <body lang="en-us">
 
