--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
 
 <body lang="en-us">
 
+
+<!--
 <div class="banner"> <img src="./img/IMG_3969.jpg" alt="EPF2023 Banner">
+
+<div class="top-left"> 
+<span class="title1">Exoplanets &amp; Planet </span>
+<span  class="title2">Formation Workshop</span> <span class="year">2025</span>
+</div>
+
+
+<div class="bottom-right">&nbsp; September 1-4, 2025<br>
+LiJiang, Yunnan</div>
+时间/地点 
+</div>
+<br>
+-->
+
+
 <!-- 主标题 -->
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
@@ -42,16 +59,11 @@
 <div class="bottom-right">&nbsp; September 1-4, 2025<br>
 LiJiang, Yunnan</div>
 <!-- 时间/地点 -->
-</div>
 <br>
 
 
+
 <!-- 主菜单 -->
-<!--
-<header class="text-left content-header">
-  <h1 class="author"><a href="./">Home</a></h1>
-</header>
--->
 <table class="navigation">
 <tbody>
 <tr>
