--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ LiJiang, Yunnan</div>
 <!-- 主标题 -->
 
 <!-- 时间/地点 -->
-<div class="bottom-right">&nbsp; September 1-4, 2025<br>
+<div>&nbsp; September 1-4, 2025<br>
 LiJiang, Yunnan</div>
 <!-- 时间/地点 -->
 <br>
