--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ LiJiang, Yunnan</div>
 <!-- 主标题 -->
 
 <!-- 时间/地点 -->
-<div>&nbsp; September 1-4, 2025<br>
-LiJiang, Yunnan</div>
+<h2>&nbsp; September 1-4, 2025<br>
+LiJiang, Yunnan</h2>
 <!-- 时间/地点 -->
 <br>
 
