--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@ LiJiang, Yunnan</div>
 <!-- 主标题 -->
 
 <!-- 时间/地点 -->
-<h2>&nbsp; September 1-4, 2025<br>
-LiJiang, Yunnan</h2>
+<h3>&nbsp; September 1-4, 2025, LiJiang, Yunnan</h3>
 <!-- 时间/地点 -->
 <br>
 
