--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ LiJiang, Yunnan</div>
 
 
 <!-- 主标题 -->
+<div>
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
 <span  class="title2">Formation Workshop</span> <span class="year">2025</span>
@@ -58,6 +59,7 @@ LiJiang, Yunnan</div>
 <!-- 时间/地点 -->
 <h3>&nbsp; September 1-4, 2025, LiJiang, Yunnan</h3>
 <!-- 时间/地点 -->
+</div>
 <br>
 
 
