--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@ LiJiang, Yunnan</div>
 -->
 
 
+<table width="100%" height="200" border="0">
+<tr>
+<td align="left" valign="top">
 <!-- 主标题 -->
-<div>
-<div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
-<span  class="title2">Formation Workshop</span> <span class="year">2025</span>
-</div>
-<!-- 主标题 -->
+<span class="title2">Formation Workshop</span>
+<span class="year">2025</span>
+</td>
+<td align="right" valign="bottom">
+<!-- 时间/地点 -->
+<h3>September 1-4, 2025, LiJiang, Yunnan</h3>
+</td>
+</tr>
+</table>
 
-<!-- 时间/地点 -->
-<h3>&nbsp; September 1-4, 2025, LiJiang, Yunnan</h3>
-<!-- 时间/地点 -->
-</div>
-<br>
 
 
 
