--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@ LiJiang, Yunnan</div>
 <!-- 主标题 -->
 <span class="title1">Exoplanets &amp; Planet </span>
 <span class="title2">Formation Workshop</span>
-<span class="year">2025</span>
+<span class="year">2025</span><br>
 </td>
-<br>
 <td align="right" valign="bottom">
 <!-- 时间/地点 -->
 <h3>September 1-4, 2025, LiJiang, Yunnan</h3>
 </td>
 </tr>
 </table>
+
 
 
 
