--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ LiJiang, Yunnan</div>
 </td>
 <td align="right" valign="bottom">
 <!-- 时间/地点 -->
+<div>
 <h3>September 1-4, 2025, LiJiang, Yunnan</h3>
+</div>
 </td>
 </tr>
 </table>
