--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@ LiJiang, Yunnan</div>
 <!-- 主标题 -->
 <span class="title1">Exoplanets &amp; Planet </span>
 <span class="title2">Formation Workshop</span>
-<span class="year">2025</span><br>
+<span class="year">2025</span>
 </td>
+<br>
 <td align="right" valign="bottom">
 <!-- 时间/地点 -->
 <div>
