--- a/index.html
+++ b/index.html
@@ -47,25 +47,27 @@ LiJiang, Yunnan</div>
 <br>
 -->
 
-
+<!--
 <table width="100%" height="200" border="0">
 <tr>
 <td align="left" valign="top">
-<!-- 主标题 -->
 <span class="title1">Exoplanets &amp; Planet </span>
 <span class="title2">Formation Workshop</span>
 <span class="year">2025</span>
 </td>
-<br>
 <td align="right" valign="bottom">
-<!-- 时间/地点 -->
 <div>
 <h3>September 1-4, 2025, LiJiang, Yunnan</h3>
 </div>
 </td>
 </tr>
 </table>
+-->
 
+<div class="top-left"> 
+<h1 class="title1">Exoplanets &amp; Planet </h1>
+<h1  class="title2">Formation Workshop</h1> <h1 class="year">2025</h1>
+</div>
 
 
 
