--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body lang="en-us">
 
 
-<!--
+
 <div class="banner"> <img src="./img/IMG_3969.jpg" alt="EPF2023 Banner">
 
 <div class="top-left"> 
@@ -39,13 +39,9 @@
 <span  class="title2">Formation Workshop</span> <span class="year">2025</span>
 </div>
 
-
-<div class="bottom-right">&nbsp; September 1-4, 2025<br>
-LiJiang, Yunnan</div>
-时间/地点 
+<div class="bottom-right">&nbsp; September 1-4, 2025, LiJiang, Yunnan</div>
 </div>
 <br>
--->
 
 <!--
 <table width="100%" height="200" border="0">
@@ -63,12 +59,6 @@ LiJiang, Yunnan</div>
 </tr>
 </table>
 -->
-
-<div class="top-left"> 
-<h1 class="title1">Exoplanets &amp; Planet </h1>
-<h1  class="title2">Formation Workshop</h1> <h1 class="year">2025</h1>
-</div>
-
 
 
 
