--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
 
-<div class="banner"> <img src="./img/IMG_3969.jpg" alt="EPF2023 Banner">
+<div class="banner">
 
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
