--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
-<span  class="title2">Formation Workshop</span> <span class="year">2025</span>
+<span  class="title2">Formation Workshop</span> 
+<span class="year">2025</span>
 </div>
 
 <div class="bottom-right">&nbsp; September 1-4, 2025, LiJiang, Yunnan</div>
