--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> <h3>&nbsp; September 1-4, 2025, LiJiang, Yunnan</h3> </div>
+<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
 </div>
 <br>
 
