--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body lang="en-us">
 
 
-
+<!-- 主标题 -->
 <div class="banner">
 
 <div class="top-left"> 
@@ -44,24 +44,7 @@
 
 <div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
 </div>
-
-<!--
-<table width="100%" height="200" border="0">
-<tr>
-<td align="left" valign="top">
-<span class="title1">Exoplanets &amp; Planet </span>
-<span class="title2">Formation Workshop</span>
-<span class="year">2025</span>
-</td>
-<td align="right" valign="bottom">
-<div>
-<h3>September 1-4, 2025, LiJiang, Yunnan</h3>
-</div>
-</td>
-</tr>
-</table>
--->
-
+<!-- 主标题 -->
 
 
 <!-- 主菜单 -->
