--- a/program/index.html
+++ b/program/index.html
@@ -30,21 +30,21 @@
 <body lang="en-us">
 
 <!-- 主标题 -->
+<div class="banner">
+
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
-<span  class="title2">Formation Workshop</span> <span class="year">2025</span>
+<span  class="title2">Formation Workshop</span> 
+<span class="year">2025</span>
 </div>
-<br>
+
+<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+</div>
 <!-- 主标题 -->
 
 
 
 <!-- 主菜单 -->
-<!--
-<header class="text-left content-header">
-  <h1 class="author"><a href="./">Home</a></h1>
-</header>
--->
 <table class="navigation">
 <tbody>
 <tr>
@@ -66,7 +66,7 @@
 
 
 <!-- 主内容 -->
-<h2>Here will show the program of the workshop.</h2>
+<h2>Here will show the program of workshop.</h2>
 <!-- 主内容 -->
 
 
