--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -30,21 +30,21 @@
 <body lang="en-us">
 
 <!-- 主标题 -->
+<div class="banner">
+
 <div class="top-left"> 
 <span class="title1">Exoplanets &amp; Planet </span>
-<span  class="title2">Formation Workshop</span> <span class="year">2025</span>
+<span  class="title2">Formation Workshop</span> 
+<span class="year">2025</span>
 </div>
-<br>
+
+<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+</div>
 <!-- 主标题 -->
 
 
 
 <!-- 主菜单 -->
-<!--
-<header class="text-left content-header">
-  <h1 class="author"><a href="./">Home</a></h1>
-</header>
--->
 <table class="navigation">
 <tbody>
 <tr>
@@ -65,7 +65,7 @@
 <!-- 主菜单 -->
 
 
-<!-- 提交报告/海报 -->
+<!-- 提交报告 -->
 <form action="https://formspree.io/f/movjlzor" method="POST">
 <h3>Submit your abstract of report: </h3>
 
@@ -81,7 +81,7 @@
 <br>
 <br>
 
-<button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 25px;">
+<button type="submit" style="background-color: transparent; border: none; color: #4b719f; font-size: 30px;">
 Click here to submit
 </button>
 
@@ -91,7 +91,11 @@ Click here to submit
 -->
 
 </form>
-<!-- 提交报告/海报 -->
+<!-- 提交报告 -->
+
+<!-- 海报相关 -->
+<h3>
+<!-- 海报相关 -->
 
 
 
