--- a/index.html
+++ b/index.html
@@ -77,14 +77,25 @@ researchers primarily around the East Asian area, for more in-depth
 communications and discussions on the frontiers of this field, and aims to
 foster regional interactions and collaborations in the post-covid era. It
 also serves as a continuation of the "Exoplanet and Planet Formation"
-international conference in 2017 held in Shanghai, and the "Planet
-Formation (regional) Workshop 2019" held at NAOJ.</p>
+international conference in 2017 held in Shanghai, the "Planet
+Formation (regional) Workshop 2019" held at NAOJ, and the "Planet
+Formation (regional) Workshop 2023" held at Beijing.</p>
+
 <p>Topics include:</p>
 <ul class="list">
   <li class="list">Formation, structure, dynamics, chemistry and evolution of protoplanetary disks</li>
   <li class="list">Formation of planets and planetary systems and its synergy with protoplanetary disks</li>
   <li class="list">Detection, characterization, atmosphere and dynamics of exoplanets</li>
 </ul>
+
+<!-- 日期安排 -->
+<h2>Key Dates</h2>
+
+
+<!-- 组织者 -->
+<h2>Organizers</h2>
+<h3>SOC</h3>
+<h3>LOC</h3>
 <!-- 主内容 -->
 
 
