--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -75,8 +75,8 @@
 <label for="email">E-mail: </label>
 <input type="email" id="email" name="email" style="border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 
-<label for="tittle">Report tittle: </label>
-<input type="tittle" id="tittle" name="tittle" style="border: 4px solid #4b719f; padding: 5px; border-radius: 4px;" required>
+<label for="title">Report title: </label>
+<input type="title" id="title" name="title" style="width: 300px; border: 2px solid #4b719f; padding: 5px; border-radius: 4px;" required>
 <br>
 
 <label for="report">Abstract: </label><br>
