--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 field in astrophysics. This is largely driven by the advent of major
 observational facilities such as ALMA and JWST, together with advancement
 in theoretical models and computational efforts. Following the success of
-Protostars &amp; Planets VII earlier this year, this workshop will bring
+Protostars &amp; Planets VII, this workshop will bring
 researchers primarily around the East Asian area, for more in-depth
 communications and discussions on the frontiers of this field, and aims to
 foster regional interactions and collaborations in the post-covid era. It
