--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <td class="navigation"> <a title="Logistics of the Conference" href="./logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Report & Poster" href="./report_poster">Report &amp; Poster</a> </td>
+<td class="navigation"> <a title="Talk & Poster" href="./report_poster">Talk &amp; Poster</a> </td>
 
 </tr>
 </tbody>
@@ -96,6 +96,20 @@ Formation (regional) Workshop 2023" held at Beijing.</p>
 <h2>Organizers</h2>
 <h3>SOC</h3>
 <h3>LOC</h3>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- 主内容 -->
 
 
