--- a/registration/index.html
+++ b/registration/index.html
@@ -57,7 +57,7 @@
 
 <td class="navigation"> <a title="Logistics of the Conference" href="../logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Report & Poster" href="../report_poster">Report &amp; Poster</a> </td>
+<td class="navigation"> <a title="Talk & Poster" href="../report_poster">Talk &amp; Poster</a> </td>
 
 </tr>
 </tbody>
