--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -57,7 +57,7 @@
 
 <td class="navigation"> <a title="Logistics of the Conference" href="../logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Report & Poster" href="./">Report &amp; Poster</a> </td>
+<td class="navigation"> <a title="Talk & Poster" href="./">Talk &amp; Poster</a> </td>
 
 </tr>
 </tbody>
