--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
@@ -79,7 +79,7 @@ foster regional interactions and collaborations in the post-covid era. It
 also serves as a continuation of the "Exoplanet and Planet Formation"
 international conference in 2017 held in Shanghai, the "Planet
 Formation (regional) Workshop 2019" held at NAOJ, and the "Planet
-Formation (regional) Workshop 2023" held at Beijing.</p>
+Formation Workshop 2023" held at Beijing.</p>
 
 <p>Topics include:</p>
 <ul class="list">
@@ -88,16 +88,89 @@ Formation (regional) Workshop 2023" held at Beijing.</p>
   <li class="list">Detection, characterization, atmosphere and dynamics of exoplanets</li>
 </ul>
 
+
+<!-- 邀请报告 -->
+<h2> Confirmed Speakers </h2>
+<!-- <div class="two-column-layout">
+      <div>
+        <ul style="width: 100%;">
+          <li>Eugene Chiang (Berkeley)</li>
+          <li>Ruobing Dong (UVictoria)</li>
+          <li>Fei Dai (Caltech)</li>
+          <li>Min Fang (PMO)</li>
+          <li>Fabo Feng (TDLI)</li>
+          <li>Yuri Fujii (Kyoto)</li>
+          <li>Teruyuki Hirano (NAOJ)</li>
+          <li>Daniel Harsono (National Tsinghua)</li>
+          <li>Shigeru Ida (Tokyo Tech)</li>
+          <li>Dong Lai (Cornell/TDLI)</li>
+        </ul>
+      </div>
+      <div>
+        <ul style="width: 100%;">
+          <li>Min-Kai Lin (ASIAA)</li>
+          <li>Hauyu Baobab Liu (SYSU Kaohsiung)</li>
+          <li>Satoshi Okuzumi (Tokyo Tech)</li>
+          <li>Chris Ormel (Tsinghua)</li>
+          <li>Lile Wang (PKU)</li>
+          <li>Yanqin Wu (Toronto)</li>
+          <li>Ji-Wei Xie (NJU)</li>
+          <li>Fei Yan (USTC)</li>
+          <li>Jun Yang (PKU)</li>
+          <li>and more to follow</li>
+        </ul>
+      </div>
+    </div> -->
+<!-- 邀请报告 -->
+
+
 <!-- 日期安排 -->
 <h2>Key Dates</h2>
 
 
 <!-- 组织者 -->
 <h2>Organizers</h2>
+
+
+<!-- SOC -->
 <h3>SOC</h3>
-<h3>LOC</h3>
+<div class="two-column-layout">
+<ul style="width: 100%;">
+<li>Cong Yu (SYSU Zhuhai, chair)</li>
+<li>Hauyu Baobab Liu (SYSU Kaohsiung)</li>
+<li>Jiwei Xie (NJU)</li>
+<li>Kazumasa Ohno (NAOJ)</li>
+<li>Minkai Lin (ASIAA)</li>
+</ul>
 
 
+<!-- Hauyu Baobab Liu (National Sun Yat-Sen University)
+Jiwei Xie (Nanjing University)
+Kazumasa Ohno (National Astronomical Observatory of Japan)
+Minkai Lin (Academia Sinica Institute of Astronomy and Astrophysics)
+
+
+Satoshi Okuzumi (Institute of Science Tokyo)
+Takayuki Muto (Kogakuin University)
+Xuening Bai (Tsinghua University)
+Yuhiko Aoyama (Sun Yat-Sen University)
+Yuri Fujii (Kyoto University)
+ -->
+
+<ul style="width: 100%;">
+<li>Satoshi Okuzumi (Science Tokyo)</li>
+<li>Takayuki Muto (Kogakuin)</li>
+<li>Xuening Bai (Tsinghua)</li>
+<li>Yuhiko Aoyama (SYSU Zhuhai)</li>
+<li>Yuri Fujii (Kyoto)</li>
+</ul>
+</div>
+<!-- SOC -->
+
+
+<h3>LOC & Volunteers</h3>
+
+Cong Yu (Chair), Bo Ma, Shangfei Liu, Yuhiko Aoyama, Qiang Hou, Zhentai Zhang, Xiangtao Zeng, Miaoyin Tang, Xueyuan Wang, Xinyi Yang
 
 
 
