--- a/registration/index.html
+++ b/registration/index.html
@@ -38,7 +38,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
@@ -66,7 +66,39 @@
 
 
 <!-- 主内容 -->
-<h2>Here will show the process of registration.</h2>
+<h2>Registration Fee</h2>
+
+<p>The following registration fee applies:</p>
+
+<ul class="list">
+  <li class="list">CNY , for students;</li>
+  <li class="list">CNY , for others.</li>
+</ul>
+
+<p>For people who have Alipay or WeChat Pay set up, please scan the following QR code to complete the payment. Descriptions about the payment page are provided below for people who cannot read Chinese.</p>
+
+<!-- 二维码 -->
+<table>
+      <tbody><tr>
+        <td style="text-align:center">
+          <img src="img/payment_QR.png" height="300px" alt="Payment QR Code">
+        </td>
+        <td style="text-align:center">
+          <img src="img/payment_note.jpg" height="300px" alt="Descriptions about the Payment Page">
+        </td>
+      </tr>
+      <tr>
+        <td class="note">
+          Payment QR Code
+        </td>
+        <td class="note">
+          Descriptions about the Payment Page. Please click <a href="img/payment_note.jpg">here</a> for a larger picture.
+        </td>
+      </tr>
+    </tbody></table>
+<!-- 二维码 -->
+
+
 <!-- 主内容 -->
 
 
