--- a/registration/index.html
+++ b/registration/index.html
@@ -81,7 +81,7 @@
 <table>
       <tbody><tr>
         <td style="text-align:center">
-          <img src="img/payment_QR.png" height="300px" alt="Payment QR Code">
+          <img src="../img/payment_QR.png" height="300px" alt="Payment QR Code">
         </td>
         <td style="text-align:center">
           <img src="img/payment_note.jpg" height="300px" alt="Descriptions about the Payment Page">
@@ -92,7 +92,7 @@
           Payment QR Code
         </td>
         <td class="note">
-          Descriptions about the Payment Page. Please click <a href="img/payment_note.jpg">here</a> for a larger picture.
+          Descriptions about the Payment Page. Please click <a href="../img/payment_note.jpg">here</a> for a larger picture.
         </td>
       </tr>
     </tbody></table>
