--- a/registration/index.html
+++ b/registration/index.html
@@ -84,7 +84,7 @@
           <img src="../img/payment_QR.png" height="300px" alt="Payment QR Code">
         </td>
         <td style="text-align:center">
-          <img src="img/payment_note.jpg" height="300px" alt="Descriptions about the Payment Page">
+          <img src="../img/payment_note.jpg" height="300px" alt="Descriptions about the Payment Page">
         </td>
       </tr>
       <tr>
