--- a/registration/index.html
+++ b/registration/index.html
@@ -92,7 +92,7 @@
           Payment QR Code
         </td>
         <td class="note">
-          Descriptions about the Payment Page. Please click <a href="../img/payment_note.jpg">here</a> for a larger picture.
+          Description about the Payment Page. Please click <a href="../img/payment_note.jpg">here</a> for a larger picture.
         </td>
       </tr>
     </tbody></table>
