--- a/registration/index.html
+++ b/registration/index.html
@@ -84,7 +84,7 @@
           <img src="../img/payment_QR.png" height="300px" alt="Payment QR Code">
         </td>
         <td style="text-align:center">
-          <img src="../img/payment_note.jpg" height="300px" alt="Descriptions about the Payment Page">
+          <img src="../img/payment.jpg" height="300px" alt="Descriptions about the Payment Page">
         </td>
       </tr>
       <tr>
@@ -92,7 +92,7 @@
           Payment QR Code
         </td>
         <td class="note">
-          Description about the Payment Page. Please click <a href="../img/payment_note.jpg">here</a> for a larger picture.
+          Descriptions about the Payment Page. Please click <a href="../img/payment.jpg">here</a> for a larger picture.
         </td>
       </tr>
     </tbody></table>
