--- a/registration/index.html
+++ b/registration/index.html
@@ -49,9 +49,9 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href="../">Home</a> </td>
+<td class="navigation"> <a title="Conference Home Page"href="../">Home</a> </td>
 
-<td class="navigation"> <a title="Register for the Conference" href="./">Registration</a></td>
+<td class="navigation"> <a class="current" title="Register for the Conference" href="./">Registration</a></td>
 
 <td class="navigation"> <a title="Conference Program" href="../program">Program</a></td>
 
@@ -98,6 +98,28 @@
     </tbody></table>
 <!-- 二维码 -->
 
+<!-- 外国人支付信息 -->
+<p>Foreign participants are encouraged to set up the mobile payment and pay the registration fee via the QR code above. Check out the following pages for how to set up Alipay and WeChat Pay:</p>
+
+<ul class="list">
+  <li class="list"><a href="https://www.chinatraveldestination.com/alipay-tour-pass/">Alipay for foreign nationals</a></li>
+  <li class="list"><a href="https://www.chinatraveldestination.com/wechat-pay-for-foreigners/">WeChat Pay for foreign nationals</a></li>
+</ul>
+<!-- 外国人支付信息 -->
+
+<!-- 现金支付 -->
+<p>For people who can only pay via credit card or cash, the registration fee will be collected at the front desk during reception. However, participants are encouraged to complete the payment via the online method in order to avoid the long queue.</p>
+<!-- 现金支付 -->
+
+<p style="color: #b8860b;">
+<strong>Registration fees are non-refundable.</strong> 
+</p>
+
+<!-- 日期提醒 -->
+<h2 style="color: gray;">Pre-registration: </h2>
+<h2 style="color: gray;">Abstract Submission: </h2>
+<h2 style="color: gray;">Formal Registration: </h2>
+<!-- 日期提醒 -->
 
 <!-- 主内容 -->
 
