--- a/program/index.html
+++ b/program/index.html
@@ -38,7 +38,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
@@ -49,11 +49,11 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href="../">Home</a> </td>
+<td class="navigation"> <a title="Conference Home Page"href="../">Home</a> </td>
 
 <td class="navigation"> <a title="Register for the Conference" href="../registration">Registration</a></td>
 
-<td class="navigation"> <a title="Conference Program" href="./">Program</a></td>
+<td class="navigation"> <a class="current"  title="Conference Program" href="./">Program</a></td>
 
 <td class="navigation"> <a title="Logistics of the Conference" href="../logistics">Logistics</a></td>
 
@@ -66,7 +66,7 @@
 
 
 <!-- 主内容 -->
-<h2>Here will show the program of workshop.</h2>
+<h2>The program of workshop will updated after the registration close.</h2>
 <!-- 主内容 -->
 
 
