--- a/logistics/index.html
+++ b/logistics/index.html
@@ -38,7 +38,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
@@ -49,13 +49,13 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href="../">Home</a> </td>
+<td class="navigation"> <a title="Conference Home Page"href="../">Home</a> </td>
 
 <td class="navigation"> <a title="Register for the Conference" href="../registration">Registration</a></td>
 
 <td class="navigation"> <a title="Conference Program" href="../program">Program</a></td>
 
-<td class="navigation"> <a title="Logistics of the Conference" href="./">Logistics</a></td>
+<td class="navigation"> <a class="current" title="Logistics of the Conference" href="./">Logistics</a></td>
 
 <td class="navigation"> <a title="Talk & Poster" href="../report_poster">Talk &amp; Poster</a> </td>
 
@@ -69,6 +69,11 @@
 <h2>Here will show the logistics of lijiang.</h2>
 <!-- 主内容 -->
 
+<!-- 地址 -->
+<div style="text-align: center;">
+<iframe src="https://www.google.com/maps/d/embed?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&ehbc=2E312F" width="640" height="480"></iframe>
+</div>
+<!-- 地址 -->
 
 
 <!-- 脚注 -->
