--- a/logistics/index.html
+++ b/logistics/index.html
@@ -67,7 +67,9 @@
 
 <!-- 主内容 -->
 <h2>Here will show the logistics of lijiang.</h2>
-<!-- 主内容 -->
+
+<p>EPF2025 will be held at <a href="https://www.google.com/maps/d/edit?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&usp=sharing"> Lijiang Guanfang Hotel Garden Villas@Lijiang. (丽江官房大酒店花园别墅)</a> 
+</p>
 
 <!-- 地址 -->
 <div style="text-align: center;">
@@ -75,6 +77,8 @@
 </div>
 <!-- 地址 -->
 
+
+<!-- 主内容 -->
 
 <!-- 脚注 -->
 <div class="container">
