--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Yuri Fujii (Kyoto University)
 <h3>LOC & Volunteers</h3>
 
 <p>
-Cong Yu (Chair), Bo Ma, Shangfei Liu, Yuhiko Aoyama, Qiang Hou, Zhentai Zhang, Xiangtao Zeng, Miaoyin Tang, Xueyuan Wang, Xinyi Yang
+Cong Yu (Chair), Bo Ma, Shangfei Liu, Yuhiko Aoyama, Wei Zhong, Qiang Hou, Zhentai Zhang, Xiangtao Zeng, Yuzi Wu, Miaoyin Tang, Xueyuan Wang, Xinyi Yang
 </p>
 
 
