--- a/logistics/index.html
+++ b/logistics/index.html
@@ -66,16 +66,139 @@
 
 
 <!-- 主内容 -->
-<h2>Here will show the logistics of lijiang.</h2>
-
-<p>EPF2025 will be held at <a href="https://www.google.com/maps/d/edit?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&usp=sharing"> Lijiang Guanfang Hotel Garden Villas@Lijiang. (丽江官房大酒店花园别墅)</a> 
-</p>
+<h2>Conference venue</h2>
+<p>EPF2025 will be held at <a href="https://www.google.com/maps/d/edit?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&usp=sharing"> 
+  Lijiang Guanfang Hotel Garden Villas@Lijiang. (丽江官房大酒店花园别墅).</a> 
+  Its location is shown on the following map, 
+  together with the primary airports/railway stations and some popular locations.</p>
 
 <!-- 地址 -->
 <div style="text-align: center;">
 <iframe src="https://www.google.com/maps/d/embed?mid=1IEvhkYT_t8TSUnMY5DF2wUsZNyjhu6k&ehbc=2E312F" width="640" height="480"></iframe>
 </div>
 <!-- 地址 -->
+
+<p>For participants, we highly recommend to take a taxi to get from airports/railway stations to the hotel. 
+  Rough estimates of time and cost are listed below:</p>
+  <table border="1" cellspacing="0" cellpadding="6" style="border-collapse: collapse; width: 100%;">
+    <thead>
+      <tr>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">Airports/Railway Stations</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">Time/h</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">Cost/RMB</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Lijiang Railway Station</td>
+        <td style="border: 1px solid black; text-align: center;">0.5</td>
+        <td style="border: 1px solid black; text-align: center;">50</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Lijiang Sanyi Airport</td>
+        <td style="border: 1px solid black; text-align: center;">1.0</td>
+        <td style="border: 1px solid black; text-align: center;">100</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
+  
+<p>For non-Chinese speakers, you can show the content below to the taxi driver.
+
+  <div style="text-align: center;">
+    <h3>请送我到：官房大酒店花园别墅</h3>
+    <h3>地址：古城区香格里大道</h3>
+  </div>
+  
+<p>If there is any question, please call Mr.Zeng:13790072653 (English).</p>
+
+<h2>Dining & Accommodation</h2>
+<p>Hotel rooms have been reserved at Lijiang Guanfang Hotel at the following prices. 
+  In the registration form, you will be asked to provide your arrival and departure dates, 
+  choose the room type, and whether you want to share a room with someone else. 
+  If there are changes you want to make after the registration, 
+  please contact us via email(<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>).</p>
+  <table border="1" cellspacing="0" cellpadding="6" style="border-collapse: collapse; width: 100%;">
+    <thead>
+      <tr>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">Room Type</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.25</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.26</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.27</th>
+        <th style="border: 1px solid black; text-align: center; font-weight: bold;">8.28</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Superior King Bed Room</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+        <td style="border: 1px solid black; text-align: center;">380</td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black; text-align: center;">Superior Twin Bed Room</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+        <td style="border: 1px solid black; text-align: center;">480</td>
+      </tr>
+    </tbody>
+  </table>
+  
+<p>The above price includes breakfast for two people. 
+  Lunches and dinners are included in the registration fee and served in the buffet style at the hotel. 
+  If you have special dietary requirements that the typical hotel buffet may not meet, 
+  please indicate this in the registration form or contact us via email(<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>).</p>
+
+<h2>Lijiang Astronomical Observation Base (Southern Base)</h2>
+<p>The Southern Base of Yunnan Observatories (CAS), located in Lijiang, 
+  includes the Gaomeigu Observation Area (3,200m altitude) and Yulong County. 
+  As a key optical astronomy hub in southern China, it benefits from low latitude, 
+  high altitude, and minimal light pollution, achieving 2,000 annual observation hours. 
+  The base hosts over 20 telescopes, including China's first 2.4-meter optical telescope (2008) 
+  and the 1.8-meter collaborative telescope.</p>
+<p>Notable achievements include discovering a bright early-universe quasar (redshift 6.3),
+  identifying 300+ supernovae, and publishing hundreds of studies on black holes and stellar evolution.</p>
+<p>picture</p>
+
+<h2>Excursion</h2>
+<p>Lijiang is a beautiful and culturally rich city situated in the northwest of Yunnan Province, China. 
+  Although we do not offer organized excursion trips, here are some of the top destinations you can explore from Lijiang:</p>
+
+<h2>Google service</h2>
+<p>Google service is not available in mainland China without a valid VPN. 
+  If your life and work heavily rely on google products (email, map, etc), 
+  please identify and set up a good VPN service before arrival. 
+  You may also find some local alternatives (e.g., Wechat ,Baidu map, etc) if needed.</p>
+
+<h2>Payment Methods in China</h2>
+<p>Credit cards may not be accepted in many occasions, especially taxi and grocery stores.
+  Therefore, we strongly encourage you to bring some cash with you. Alternatively, you
+  may try to set up mobile payment on your phone, as it is very popular in China and can
+  cover almost all the occasions you may encounter. There are two app payment giants in
+  China, Tencent's WeChat and Alibaba's Alipay, with the latter perhaps more friendly to
+  foreign visitors. Through Alipay Tour Pass, you can easily set up mobile payment and
+  pay through your phone.</p>
+
+<h2>Visa information</h2>
+<p>If you require an invitation letter to support your visa application, please indicate this in
+  the registration form. Alternatively, you may send an email with the following information
+  to <a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>.</p>
+<p>1.Your full name as it appears in your passport;</p>
+<p>2.Position and institution;</p>
+<p>3.Passport number;</p>
+<p>4.Gender;</p>
+<p>5.Nationality;</p>
+<p>6.Birth date;</p>
+<p>7.Arrival and departure dates, total duration of your visit;</p>
+<p>8.Other information that you would like to provide (e.g., multiple entry, extended visit,etc).</p>
+
+<h2>Child care service</h2>
+<p>Lijiang Guanfang Hotel Garden Villas provides child care service. 
+  Please contract us (<a href="mailto:mailto:epf2025@163.com">epf2025@163.com</a>)
+  if you want to book this service.</p>
 
 
 <!-- 主内容 -->
