--- a/report_poster/index.html
+++ b/report_poster/index.html
@@ -38,7 +38,7 @@
 <span class="year">2025</span>
 </div>
 
-<div class="bottom-right"> September 1-4, 2025, LiJiang, Yunnan </div>
+<div class="bottom-right"> Auguest 25-28, 2025, LiJiang, Yunnan </div>
 </div>
 <!-- 主标题 -->
 
@@ -49,7 +49,7 @@
 <tbody>
 <tr>
 
-<td class="navigation"> <a class="current" title="Conference Home Page"href="../">Home</a> </td>
+<td class="navigation"> <a title="Conference Home Page"href="../">Home</a> </td>
 
 <td class="navigation"> <a title="Register for the Conference" href="../registration">Registration</a></td>
 
@@ -57,7 +57,7 @@
 
 <td class="navigation"> <a title="Logistics of the Conference" href="../logistics">Logistics</a></td>
 
-<td class="navigation"> <a title="Talk & Poster" href="./">Talk &amp; Poster</a> </td>
+<td class="navigation"> <a class="current" title="Talk & Poster" href="./">Talk &amp; Poster</a> </td>
 
 </tr>
 </tbody>
